# Tachikoma-Proompt-Cookbooks

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.draft.md  CHANGELOG.md  IMPLEMENTATION-COMPLETE.md  LICENSE  README.md  dashboard_detailed_plan.md  install  install.sh  install.ts  opencode.json  package.json  pyproject.toml  template.AGENTS.md  tsconfig.json
.opencode/: .gitignore  STATE.md  requirements.txt  tachikoma-install.sh
.opencode/tools/dashboard/: pyproject.toml  test_smoke.py  test_smoke_no_rich.py
.opencode/tools/dashboard/tachikoma_dashboard/: __init__.py  __main__.py  app.py  db.py  enhanced_widgets.py  models.py  query.py  session_tree.py  styles.py  theme.py  tree_renderer.py  widgets.py
.opencode/tools/dashboard/tachikoma_dashboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
.opencode/tools/dashboard/tests/: conftest.py  test_models.py  test_tree_renderer.py  test_widgets.py
assets/: readme.md
bootstrap/: TACHIKOMA_AGENT_BOOTSTRAP.md  TACHIKOMA_AGENT_BOOTSTRAP_NON_CODE.md
dashboard/: .gitignore  FONTS.md  dashboard-smoke-test  dashboard-smoke-test.bat  requirements.txt  tachikoma-dashboard  tachikoma-dashboard.bat  test_smoke.py  test_smoke_no_rich.py
docs/: SKILLS_GUIDE.md  STATE-MD-QUICK-START.md  flake.nix  getting-started.md  implementation-plan-2026-02-16.md  index.md  installation.md  package-lock.json  package.json  progress-summary-2026-02-16.md  research-synthesis-2026-02-16.md  scripts.md  smoke-testing.md  troubleshooting.md
src/: test-context-manager.ts  test-intent-router.ts  (+3 more)
(+393 files in other folders)
