[project]
name = "tachikoma"
version = "3.4.0"
description = "Agent orchestration system for AI-assisted development"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dashboard = [
    "textual>=0.90.0",
    "rich>=13.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
