[project]
name = "tachikoma-dashboard"
version = "0.1.0"
description = "Real-time Tachikoma agent dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.90.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
tachikoma-dashboard = "tachikoma_dashboard.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
